# Code-Review-AI

./: .gitignore  README.md  TestJackson.java  dependency-reduced-pom.xml  install.bat  install.sh  pom.xml  pyproject.toml  uninstall.bat  uninstall.sh
Sample_codes/: App.java  calculator.py  server.js
code_review_ai/: chunker.py  cli.py  client.py  models.py  tui.py
sample_code/: Sample.java  sample.cpp  sample.go  sample.js  sample.py
src/main/java/com/codereviewai/: CodeReviewCLI.java  TUI.java
src/main/java/com/codereviewai/client/: AIClient.java  AnthropicClient.java  CodeReviewClient.java  GeminiClient.java  OllamaClient.java  OpenAIClient.java
src/main/java/com/codereviewai/models/: CodeReviewResult.java  ReviewIssue.java  Severity.java
src/main/java/com/codereviewai/ui/: TableFormatter.java
tests/: test_evaluator.py
