[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-review-ai"
version = "0.1.0"
description = "AI-Powered Code Review CLI Tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "litellm>=1.0.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
cr = "code_review_ai.cli:app"

[tool.setuptools.packages.find]
include = ["code_review_ai*"]
exclude = ["sample_code*"]
